# ThermoSim

./: CMakeLists.txt  README.md
Data/OVSNonCoupledClean/: ovsNCn=1,Pe=1.txt  ovsNCn=4,Pe=1.txt
Data/OVSNonCoupledwithLogBug/: ovsNCn=2,Pe=1.txt
src/: Exporter.cpp  Exporter.hpp  Simulator.cpp  Simulator.hpp  main.cpp  plotter.py  setup.txt  setupMMS.txt  setupOVS.txt  setuppr5.txt
